16 Jul 2003 mipsator
 * misc changes in pmkscan.c to use regex.
 * added sub versions for all tools.
 * added display of subversion and snapversion in debug mode.
 * misc replacements in pmksetup.
 * misc checks.
 * added pmkscan in Makefile.
 * added missing pmkscan.dat in data.

15 Jul 2003 mipsator
 * add parse.c and parse.h with a new shared parsing engine.
 * add pmkscan.c and pmkscan.h, this is preliminary and unusable code.
 * pmk now use the new parsing engine.

05 Jul 2003 mipsator
 * added c++ in the binary list of pmksetup.
 * modified get_lang().
 * added c++ support in pmk_check_include() and pmk_check_library().
 * updated pmkfile sample to use c++ in one test.

02 Jul 2003 mipsator
 * added get_lang() as preliminary work on C++ support.
 * fixed a memory fault in pmk and corrected a typo
	(noticed by Ritschard Pierre-Yves).

# PMK 0.5 released

30 Jun 2003 mipsator
 * changes for 0.5

# snapshot 0.4.7

27 Jun 2003 mipsator
 * fixed hash_destroy() to support null pointer as argument
	(noticed by Marek Habersack).
 * fixed use of dirname to avoid modification of the original string under
 	linux (noticed by Marek Habersack).
 * added init of CFLAGS and LIBS alternatives in pmk_chek_config() and
 	pmk_check_pkg_config().

# snapshot 0.4.6

26 Jun 2003 mipsator
 * added override file sample.
 * updated Makefile to use override file sample.
 * added subdir makefile example.
 * rewritten *srcdir and *buiddir computation, seems perfect now.

25 Jun 2003 mipsator
 * updated pmk man page.
 * added option to load a file that override pmk.conf (not tested yet).
 * updated man page.

24 Jun 2003 mipsator
 * added uabspath() in pathtools.
 * added -b option to set basedir.
 * moved pmkfile path in gdata.
 * related misc ...

22 Jun 2003 mipsator
 * added missing snapshots in Changelog.
 * fixed a bug in chkpath().
 * finished (??) to implement srcdir and builddir stuff.
 * now templates are relative to the path of pmkfile.