@@ -1,3 +1,6 @@
+17 Jul 2003 mipsator
+ * added a check for _Bool type (fix for Tru64 >= 5.x ans solaris 9).
+
 16 Jul 2003 mipsator
  * misc changes in pmkscan.c to use regex.
  * added sub versions for all tools.
